--- a/templates/actor/actor-primary-resources.hbs
+++ b/templates/actor/actor-primary-resources.hbs
@@ -19,7 +19,8 @@
       <span class='erps-resource-box__separator'> / </span>
       <input
         type='text'
-        disabled='true'
+        name='system.resolve.max'
+        {{#if (not resolveManualMode)}}disabled{{/if}}
         value='{{system.resolve.max}}'
         class='erps-resource-box__input'
         data-dtype='Number'
@@ -48,7 +49,8 @@
       <span class='erps-resource-box__separator'> / </span>
       <input
         type='text'
-        disabled='true'
+        name='system.power.max'
+        {{#if (not powerManualMode)}}disabled{{/if}}
         value='{{system.power.max}}'
         class='erps-resource-box__input'
         data-dtype='Number'
