Remove support for power or resolve manual mode: use new fields to support manual changing.

--- a/templates/actor/actor-primary-resources.hbs
+++ b/templates/actor/actor-primary-resources.hbs
@@ -20,7 +20,7 @@
       <input
         type='text'
         name='system.resolve.max'
-        {{#if (not resolveManualMode)}}disabled{{/if}}
+        disabled
         value='{{system.resolve.max}}'
         class='erps-resource-box__input'
         data-dtype='Number'
@@ -50,7 +50,7 @@
       <input
         type='text'
         name='system.power.max'
-        {{#if (not powerManualMode)}}disabled{{/if}}
+        disabled
         value='{{system.power.max}}'
         class='erps-resource-box__input'
         data-dtype='Number'
