Point total reminders in the form of the stat total box changing colors.

--- a/src/scss/components/sheet/resource-boxes/_stat-box.scss
+++ b/src/scss/components/sheet/resource-boxes/_stat-box.scss
@@ -74,4 +74,12 @@
   &--neutral {
     @include resource-box-generic;
   }
-} 
+
+  &--success {
+    @include resource-box-success;
+  }
+
+  &--danger {
+    @include resource-box-danger;
+  }
+}
