--- a/templates/item/attribute-parts/action-card-config.hbs
+++ b/templates/item/attribute-parts/action-card-config.hbs
@@ -166,6 +166,28 @@
       <p class="erps-form__hint">{{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.EnforceStatusChoice.hint"}}</p>
     </div>
 
+    {{!-- Self-Target Toggle --}}
+    <div class="eventide-sheet__toggle-group">
+      <label class="erps-toggles erps-toggles--label-left">
+        <input
+          type="checkbox"
+          class="erps-toggles__input"
+          name="system.selfTarget"
+          id="system.selfTarget"
+          {{checked system.selfTarget}}
+        />
+        <div class="erps-toggles__container">
+          <span class="erps-toggles__label" title='{{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.SelfTarget.hint"}}'>
+            {{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.SelfTarget.label"}}
+          </span>
+          <span class="erps-toggles__track">
+            <span class="erps-toggles__thumb"></span>
+          </span>
+        </div>
+      </label>
+      <p class="erps-form__hint">{{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.SelfTarget.hint"}}</p>
+    </div>
+
   </div>
   </div>
 </section>
