--- a/src/scss/components/sheet/items-panel/_action-card-groups.scss
+++ b/src/scss/components/sheet/items-panel/_action-card-groups.scss
@@ -47,6 +47,20 @@
     border-color: rgb(255 255 255 / 30%);
   }
 
+  // Suppress hover animations when context menu is active
+  // This prevents flickering when context menu appears over action card groups
+  .context-menu-active & {
+    transition: none !important;
+
+    &:hover {
+      transform: none !important;
+      box-shadow:
+        0 4px 12px rgb(0 0 0 / 30%),
+        inset 0 1px 0 rgb(255 255 255 / 10%) !important;
+      border-color: rgb(255 255 255 / 10%) !important;
+    }
+  }
+
   // Collapsed state - less prominent
   &--collapsed {
     box-shadow:
