Sanitize text input through the foundry enrich HTML systems.

--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -30,7 +30,7 @@
       {{#if system.rollActorName}}
         <div class="chat-card__description--header">{{actor.name}}. . . </div>
       {{/if}}
-      {{{system.description}}}
+      {{{enrichedDescription}}}
     </div>
   {{/if}}
 </div>
