--- a/templates/chat/gear-message.hbs
+++ b/templates/chat/gear-message.hbs
@@ -8,7 +8,7 @@
     {{#if item.system.rollActorName}}
       <div class="chat-card__description--header">{{item.actor.name}}. . . </div>
     {{/if}}
-    {{{item.system.description}}}
+    {{{enrichedDescription}}}
   </div>
 {{/if}}
 {{#if context}}
