--- a/templates/macros/popups/action-card-popup.hbs
+++ b/templates/macros/popups/action-card-popup.hbs
@@ -29,7 +29,7 @@
       <div class="erps-form__section">
         <div class="erps-form__header erps-form__header--small">{{actionCard.actor.name}}</div>
         <div class="erps-form__description">
-          {{{actionCard.system.description}}}
+          {{{enrichedDescription}}}
         </div>
       </div>
     {{/if}}
