--- a/templates/macros/popups/combat-power-popup.hbs
+++ b/templates/macros/popups/combat-power-popup.hbs
@@ -7,9 +7,9 @@
         
         {{#if item.system.description}}
         <div class="erps-form__section">
-            <div class="erps-form__header erps-form__header--small">{{item.actor.name}}</div> 
+            <div class="erps-form__header erps-form__header--small">{{item.actor.name}}</div>
             <div class="erps-form__description">
-                {{{item.system.description}}}
+                {{{enrichedDescription}}}
             </div>
         </div>
         {{/if}}
