--- a/templates/macros/popups/feature-popup.hbs
+++ b/templates/macros/popups/feature-popup.hbs
@@ -7,7 +7,7 @@
       <div class="erps-form__section">
         <div class="erps-form__header">{{item.actor.name}}</div>
         <div class="erps-form__description">
-          {{{item.system.description}}}
+          {{{enrichedDescription}}}
         </div>
       </div>
     {{/if}}
