--- a/templates/chat/feature-message.hbs
+++ b/templates/chat/feature-message.hbs
@@ -15,7 +15,7 @@
     {{#if item.system.rollActorName}}
       <div class="chat-card__description--header">{{item.actor.name}}. . . </div>
     {{/if}}
-    {{{item.system.description}}}
+    {{{enrichedDescription}}}
   </div>
 {{/if}}
   {{> card-effects}}
