--- a/templates/macros/popups/gear-popup.hbs
+++ b/templates/macros/popups/gear-popup.hbs
@@ -8,9 +8,9 @@
         {{#if (or isGM item.system.equipped)}}
             {{#if item.system.description}}
             <div class="erps-form__section">
-                <div class="erps-form__header erps-form__header--small">{{item.actor.name}}</div> 
+                <div class="erps-form__header erps-form__header--small">{{item.actor.name}}</div>
                 <div class="erps-form__description">
-                    {{{item.system.description}}}
+                    {{{enrichedDescription}}}
                 </div>
             </div>
             {{/if}}
