--- a/templates/macros/popups/status-popup.hbs
+++ b/templates/macros/popups/status-popup.hbs
@@ -5,9 +5,9 @@
 
     {{#if item.system.description}}
       <div class="erps-form__section">
-        <div class="erps-form__header">{{item.actor.name}}</div> 
+        <div class="erps-form__header">{{item.actor.name}}</div>
         <div class="erps-form__description">
-          {{{item.system.description}}}
+          {{{enrichedDescription}}}
         </div>
       </div>
     {{/if}}
