Corrected translation strings for item selector combo box.

--- a/templates/components/item-selector-combo-box.hbs
+++ b/templates/components/item-selector-combo-box.hbs
@@ -10,7 +10,7 @@
            role="combobox">
     <button type="button"
             class="erps-item-selector-combo-box__dropdown-arrow"
-            aria-label="{{localize 'ERPS.ItemSelector.ToggleDropdown'}}"
+            aria-label="{{localize 'EVENTIDE_RP_SYSTEM.Forms.ItemSelector.ToggleDropdown'}}"
             tabindex="-1">
       <i class="fas fa-chevron-down"></i>
     </button>
@@ -19,19 +19,19 @@
   <div class="erps-item-selector-combo-box__dropdown"
        role="listbox"
        aria-hidden="true"
-       aria-label="{{localize 'ERPS.ItemSelector.ItemList'}}">
+       aria-label="{{localize 'EVENTIDE_RP_SYSTEM.Forms.ItemSelector.ItemList'}}">
 
     <div class="erps-item-selector-combo-box__loading" style="display: none;">
       <div class="erps-item-selector-combo-box__loading-content">
         <i class="fas fa-spinner fa-spin"></i>
-        <span>{{localize "ERPS.ItemSelector.Loading"}}</span>
+        <span>{{localize "EVENTIDE_RP_SYSTEM.Forms.ItemSelector.Loading"}}</span>
       </div>
     </div>
 
     <div class="erps-item-selector-combo-box__empty" style="display: none;">
       <div class="erps-item-selector-combo-box__empty-content">
         <i class="fas fa-search"></i>
-        <span>{{localize "ERPS.ItemSelector.NoResults"}}</span>
+        <span>{{localize "EVENTIDE_RP_SYSTEM.Forms.ItemSelector.NoResults"}}</span>
       </div>
     </div>
 
